crates/dexo-tui/tests/snapshots/snapshots__snapshot_100x30_reduced.snap
---
source: crates/dexo-tui/tests/snapshots.rs
assertion_line: 114
expression: "render_to_string(&snapshot_model(), 100, 30)"
---
[Workbench] Connections  Agents  Server  Compare  History   demo  local  public                     
┌  Sidebar─────────────────┐ scratch.sql ×  +                                                       
│[n]ew [e]dit [a]ctions    │┌▸ SQL · scratch.sql───────────────────────────────────────────────────┐
│  ● local▾                ││   1▸select 1                                                         │
│>   ▸ public              ││                                                                      │
│      mysql.u… [no access]││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          │└──────────────────────────────────────────────────────────────────────┘
│                          │┌  Results─────────────────────────────────────────────────────────────┐
│                          ││[Grid] Explain  Messages                                              │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
local  Ctrl+J run  Ctrl+N new sql  Ctrl+W close                                           Ctrl+P  F1
