crates/dexo-tui/tests/snapshots/snapshots__snapshot_admin_sessions_pause_and_preview.snap
---
source: crates/dexo-tui/tests/snapshots.rs
expression: "render_to_string(&model, 160, 50)"
---
demo  local  public                                                                                                                                             
┌  Sidebar─────────────────┐ scratch.sql ×  +                                                                                                                   
│[n]ew [e]dit [a]ctions    │┌▸ SQL · scratch.sql───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  ● local▾  [offline]     ││   1▸select 1                                                                                                                     │
│>   ▸ public              ││                                                                                                                                  │
│      mysql.users [restric││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││           ┌Sessions──────────────────────────────────────────────────────────────────────┐                                       │
│                          ││           │admin captured_at=1710000000 paused=false                                     │                                       │
│                          ││           │session 10 user=dexo db=dexo state=active duration_ms=1200 sql=select 1       │                                       │
│                          ││           │session 11 user=dexo db=dexo state=idle in transaction duration_ms=4000 sql=lo│                                       │
│                          ││           │block 11 -> 10 lock=AccessExclusiveLock rel=public.items                      │                                       │
│                          ││           │preview SELECT pg_terminate_backend(11) lock=None confirm=TypeTarget          │                                       │
│                          ││           │confirm-target= confirmed=false                                               │                                       │
│                          ││           │                                                                              │                                       │
│                          ││           │                                                                              │                                       │
│                          ││           │                                                                              │                                       │
│                          ││           │                                                                              │                                       │
│                          ││           │                                                                              │                                       │
│                          ││           │                                                                              │                                       │
│                          ││           │                                                                              │                                       │
│                          ││           │                                                                              │                                       │
│                          ││           └──────────────────────────────────────────────────────────────────────────────┘                                       │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌  Results─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                          ││[Grid] Explain  Messages                                                                                                          │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
local  Ctrl+Enter run  Ctrl+N new sql  Ctrl+W close                                                                                                   Ctrl+P  F1
