crates/dexo-tui/tests/snapshots/snapshots__snapshot_explain_tree_table_summary-2.snap
---
source: crates/dexo-tui/tests/snapshots.rs
assertion_line: 238
expression: "render_to_string(&model, 100, 30)"
---
demo  local  public                                                                                 
┌  Sidebar─────────────────┐ local·scratch.sql ×  +                                                 
│[n]ew [e]dit [a]ctions    │┌▸ SQL · scratch.sql───────────────────────────────────────────────────┐
│> ● local▾                ││   1▸select 1                                                         │
│    ▸ public              ││                                                                      │
│      mysql.users [restric││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          │└──────────────────────────────────────────────────────────────────────┘
│                          │┌  Results (0)─────────────────────────────────────────────────────────┐
│                          ││ Grid [Explain] Messages  │ Table                                     │
│                          ││Analyzed · 0.21 ms execution · 0.04 ms planning                       │
│                          ││                              self     time  rows est  rows act  loops│
│                          ││Seq Scan on items  rows …  0.18 ms  0.18 ms        10      1000      1│
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
local  Ctrl+Enter run  Ctrl+N new sql  Ctrl+W close                                       Ctrl+P  F1
