crates/dexo-tui/tests/snapshots/snapshots__snapshot_explain_tree_table_summary-3.snap
---
source: crates/dexo-tui/tests/snapshots.rs
expression: "render_to_string(&model, 60, 20)"
---
demo  local  public          1 Sidebar  [2 SQL]  3 Results  
 local·scratch.sql ×  +                                     
┌▸ SQL · scratch.sql───────────────────────────────────────┐
│   1▸select 1                                             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
local  Ctrl+J run  Ctrl+N new sql  Ctrl+W close   Ctrl+P  F1
